test/types/records/recursive/concrete-indirect.good
concrete-indirect.chpl:7: error: record 'B' cannot contain a recursive field 'a' whose type 'A' contains 'B'
