test/types/records/recursive/concrete-indirect.chpl

record A {
  var b : B;
}

record B {
  var a : A;
}

var a = new A();
